tests/ui/parser/misspelled-keywords/unsafe-fn.stderr
error: expected one of `!` or `::`, found keyword `fn`
  --> $DIR/unsafe-fn.rs:1:9
   |
LL | unsafee fn code() {}
   |         ^^ expected one of `!` or `::`
   |
help: there is a keyword `unsafe` with a similar name
   |
LL - unsafee fn code() {}
LL + unsafe fn code() {}
   |

error: aborting due to 1 previous error

