tests/ui/parser/misspelled-keywords/unsafe-fn.rs
unsafee fn code() {}
//~^ ERROR expected one of

fn main() {}
